@@ -2,6 +2,8 @@ Revision history for Perl extension Starch.
 
 {{$NEXT}}
 
+ - Stop using Test2::Require::Module in Test::Starch.
+
 0.13 2019-03-23T21:34:30Z
 
  - Move Test::Starch back into this distro.
